Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7684

moc does not warn when a NOTIFY signal cannot be found

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.7.1
    • 4.6.1
    • Core: Object Model
    • None
    • 6cf0ad80bb8a168115772aa5c3b4abec3e372ccc

      If a Q_PROPERTY() has a NOTIFY signal, but the signal is no present in the class it is silently ignored.

        1. moc.cpp.diff
          2 kB
          Ben Conlan
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            goffart Olivier Goffart (closed Nokia identity) (Inactive)
            aakenned Aaron Kennedy
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes