fix build with recent SailfishOS SDK

NOTIFY signal has to be defined in the same class as the property
see https://bugreports.qt.io/browse/QTBUG-7684